# rstify

./: .dockerignore  .env.example  .gitignore  ACCOMPLISHMENTS.md  AGENTS.md  AUDIT.md  CLAUDE.md  COMPREHENSIVE_TEST_REPORT.md  Cargo.toml  DEVICE_UPDATE_GUIDE.md  Dockerfile  GITHUB_ACTIONS_BUILD_GUIDE.md  IMPROVEMENTS_SUMMARY.md  Justfile  MQTT-PLANNING.md  MQTT_GUIDE.md  PRODUCTION_TEST_REPORT.md  QUICKSTART.md  RALPH-PRD-MQTT.md  RALPH-PRD-PHASE6.md  RALPH-PRD.md  RALPH-PROGRESS-MQTT.md  RALPH-PROGRESS-PHASE6.md  RALPH-PROGRESS-PHASE7.md  RALPH-PROGRESS.md  README.md  SESSION_COMPLETE.md  SETUP_SIGNED_GITHUB_BUILDS.md  SPEC.md  TESTING_GUIDE.md  authenticated_tests.sh  docker-compose.yml  docker-entrypoint.sh  easKey  test_mobile_features.sh  test_production.py  test_production.sh  websocket_test.py
.claude/skills/mobile-tasks/: SKILL.md
.claude/skills/rust-backend-tasks/: SKILL.md
.claude/skills/web-ui-tasks/: SKILL.md
.forgejo/workflows/: build-android-signed.yml  ci.yaml  docker-publish.yml  mirror-to-github.yml
.github/workflows/: build-android-signed.yml  build-android.yml  docker-publish.yml  expo-build.yml
client/: .gitignore  LOCAL_BUILD_GUIDE.md  app.json  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/app/: _layout.tsx  login.tsx
client/app/(tabs)/: _layout.tsx  _ref_settings.tsx  _ref_topics.tsx  apps.tsx  channels.tsx  hub.tsx  index.tsx  settings.tsx  topics.tsx  webhooks.tsx
client/app/hub/: apps.tsx  clients.tsx  mqtt.tsx  server.tsx  settings.tsx  users.tsx  webhooks.tsx
client/app/thread/: [sourceId].tsx
client/src/api/: client.ts  index.ts  types.ts
client/src/components/: EmptyState.tsx  LiveTopicView.tsx  MessageActions.tsx  (+4 more)
crates/rstify-api/: Cargo.toml
crates/rstify-api/bindings/: HealthResponse.ts  WebhookConfigWithHealth.ts  WebhookTestResult.ts
crates/rstify-api/src/: error.rs  fcm.rs  lib.rs  ntfy_headers.rs  openapi.rs  sse.rs  state.rs  utils.rs  web_ui.rs
crates/rstify-api/src/extractors/: auth.rs
crates/rstify-api/src/helpers/: json.rs  mod.rs  ownership.rs  publish.rs  validation.rs
crates/rstify-api/src/middleware/: auth.rs  rate_limit.rs
crates/rstify-api/src/routes/: applications.rs  attachments.rs  auth.rs  clients.rs  health.rs  messages.rs  mod.rs  mqtt.rs  ntfy_publish.rs  settings.rs  stats.rs  topics.rs  unified_push.rs  users.rs  webhook_variables.rs  webhooks.rs
crates/rstify-api/src/routes/messages/: crud.rs  mod.rs  search.rs
crates/rstify-api/src/routes/topics/: management.rs  mod.rs  permissions.rs  streaming.rs
crates/rstify-api/src/routes/webhooks/: config.rs  delivery.rs  mod.rs
crates/rstify-api/src/webhooks/: forgejo.rs  github.rs  mod.rs  signature.rs  types.rs
crates/rstify-api/src/websocket/: manager.rs
crates/rstify-api/tests/: applications_test.rs  auth_test.rs  clients_test.rs  error_conversion_test.rs  harness_smoke_test.rs  messages_test.rs  rate_limit_test.rs  topics_test.rs  validation_test.rs  webhooks_test.rs
crates/rstify-api/tests/common/: mod.rs  seed.rs
crates/rstify-auth/: Cargo.toml
crates/rstify-auth/src/: acl.rs  lib.rs  password.rs  tokens.rs
crates/rstify-cli/: Cargo.toml
crates/rstify-cli/src/: config.rs  main.rs
crates/rstify-core/: Cargo.toml
crates/rstify-core/bindings/: Application.ts  Attachment.ts  AttachmentInfo.ts  CreateTopicMessage.ts  MessageResponse.ts  PagedMessages.ts  Paging.ts  TopicPermission.ts  UpdateApplication.ts  UpdateMqttBridge.ts  UpdateUser.ts  UpdateWebhookConfig.ts  WebhookDeliveryLog.ts  WebhookVariable.ts
crates/rstify-core/src/: error.rs  lib.rs  policy.rs
crates/rstify-core/src/models/: action.rs  application.rs  attachment.rs  client.rs  message.rs  mod.rs  mqtt_bridge.rs  topic.rs  unified_push.rs  user.rs  webhook.rs  webhook_delivery.rs  webhook_variable.rs
crates/rstify-core/src/repositories/: application.rs  client.rs  message.rs  mod.rs  mqtt_bridge.rs  topic.rs  user.rs  webhook_variable.rs
crates/rstify-db/: Cargo.toml
crates/rstify-db/src/: lib.rs  pool.rs
crates/rstify-db/src/repositories/: application.rs  client.rs  message.rs  mod.rs  mqtt_bridge.rs  topic.rs  user.rs  webhook_variable.rs
crates/rstify-jobs/: Cargo.toml
crates/rstify-jobs/src/: cleanup.rs  email.rs  lib.rs  outgoing_webhooks.rs  scheduled.rs  ssrf.rs  webhooks.rs
crates/rstify-mqtt/: Cargo.toml
crates/rstify-mqtt/bindings/: BridgeStatusInfo.ts
crates/rstify-mqtt/src/: auth.rs  bridge.rs  config.rs  ingest.rs  lib.rs  publish.rs
crates/rstify-mqtt/tests/: integration.rs
crates/rstify-server/: Cargo.toml
crates/rstify-server/src/: config.rs  main.rs  telemetry.rs
deploy/: docker-compose.yml
deploy/forgejo/: SETUP.md  docker-compose.yml
docs/: API_AUTHENTICATION.md  BACKUP.md  CONFIGURATION.md  MARKDOWN_SUPPORT.md  MESSAGE_ENHANCEMENTS_SUMMARY.md  MESSAGE_FEATURES.md  MESSAGE_FEATURE_ANALYSIS.md  MOBILE_BUILD_AND_UPDATE.md  OPTIMIZATIONS.md  REACT_NATIVE_IMPLEMENTATION.md  REACT_NATIVE_PRD.md  USER_GUIDE.md
migrations/: 001_users.sql  002_applications.sql  003_clients.sql  004_topics.sql  005_topic_permissions.sql  006_messages.sql  007_attachments.sql  008_webhook_configs.sql  009_indexes.sql  010_message_expiry.sql  011_outgoing_webhooks.sql  012_unified_push.sql  013_additional_indexes.sql  014_fcm_tokens.sql  015_fts5_messages.sql  016_retention_days.sql  017_client_scopes.sql  018_webhook_delivery_log.sql  019_message_source.sql  020_topic_notification_policy.sql  021_mqtt_bridges.sql  022_webhook_timeout.sql  023_webhook_redirects.sql  024_webhook_groups.sql  025_webhook_variables.sql  026_webhook_secret.sql  027_message_inbox.sql  028_topic_inbox_override.sql  029_settings_table.sql  030_index_optimizations.sql
scripts/: update-phone.sh
shared/: package.json  tsconfig.json
shared/design/: tokens.cjs
shared/utils/: index.ts  time.ts  webhookGuides.ts
web-ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web-ui/scripts/: shot.mjs  webhook-flow-shots.mjs
web-ui/src/: App.tsx  main.tsx
(+102 files in other folders)
