[package]
name = "rstify-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rstify"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
dirs = "6"
tungstenite = { version = "0.26", features = ["native-tls"] }
