[package]
name = "rstify-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rstify"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
dirs = "6"
tungstenite = { version = "0.26", features = ["native-tls"] }
