[package]
name = "rstify-db"
version.workspace = true
edition.workspace = true

[dependencies]
rstify-core = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
